# robotics-final-proj

./: .gitignore  frames_2025-11-26_20.26.36.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/actuation/lib/actuation/: gripper
install/actuation/share/actuation/: package.bash  package.sh  package.zsh
install/planning/lib/planning/: camera_tf  pick_and_place  pick_planner  simple_move
install/planning/share/planning/: package.sh  package.xml
install/planning/share/planning/launch/: gsam_pickplace.launch.py  pick_planner.launch.py
install/planning_interfaces/share/planning_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/realsense_cv/lib/realsense_cv/: edge_node  edge_tune  gsam_slide_detect  hsv_tuning  marker_node  marker_validation  slide_detector  yolo_node
install/realsense_cv/share/realsense_cv/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_aruco/lib/ros2_aruco/: aruco_generate_marker  aruco_node
install/ros2_aruco/share/ros2_aruco/: package.sh
log/: latest_build
src/: .gitignore  README.md  frames_2025-11-26_10.44.29.gv
src/actuation/: package.xml  setup.py
src/perception/: aruco_generator.py  perception_note.md
src/perception/TMFlow_CV/: cam.py  main.lua  stream.py
src/perception/realsense_cv/: setup.cfg  setup.py
src/planning/: setup.py
src/planning/launch/: marker_pickplace.launch.py
src/planning_interfaces/: CMakeLists.txt  package.xml
src/planning_interfaces/srv/: PickPlaceService.srv
(+54 files in other folders)
