<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planning</name>
  <version>0.0.0</version>
  <description>ROS2 planning package for TM12M pick operations using MoveIt2</description>
  <maintainer email="bryanchang1234@gmail.com">nano</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_py</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>planning_interfaces</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
